<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ll_head"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_gray"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".traffic.TrafficIllegalQueryActivity">



    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        style="@style/textViewSubStyle"
        android:gravity="left"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:text="@string/xzjgj" />

    <RelativeLayout
        android:id="@+id/rl_my_set"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:background="@color/color_white"
        android:padding="@dimen/activity_horizontal_margin">

        <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/textViewMainStyle"
            android:layout_centerVertical="true"
            android:text="@string/jgj" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            style="@style/textViewMainStyle"
            android:layout_marginRight="@dimen/margin"
            android:layout_toLeftOf="@+id/iv"
            android:text="点击这里查询"
            android:textColor="@color/colorMain"
            />

        <ImageView
            android:id="@+id/iv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:src="@drawable/ic_person_more" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/ll_wz"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            style="@style/textViewSubStyle"
            android:text="@string/qnsryxx" />

        <RelativeLayout
            android:id="@+id/rl_mycar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:background="@color/color_white"
            android:padding="@dimen/activity_horizontal_margin">

            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/textViewMainStyle"
                android:layout_centerVertical="true"
                android:text="@string/cph" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                style="@style/textViewSubStyle"
                android:text="鄂A000001"
                android:textColor="@color/colorForBtnLogin"
                />
        </RelativeLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorLineSep"/>

        <RelativeLayout
            android:id="@+id/rl_mycarjh"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/color_white"
            android:padding="@dimen/activity_horizontal_margin">

            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/textViewMainStyle"
                android:layout_centerVertical="true"
                android:text="@string/cjh"/>

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="5dp"
                android:background="@null"
                android:hint="@string/qsrcj"
                android:textSize="16sp" />
        </RelativeLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorLineSep"/>
        <RelativeLayout
            android:id="@+id/rl_mycarxh"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/color_white"
            android:padding="@dimen/activity_horizontal_margin">

            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/textViewMainStyle"
                android:layout_centerVertical="true"
                android:text="@string/qclx"/>

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="15dp"
                android:background="@null"
                android:hint="@string/qxzqcl"
                android:textSize="16sp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:src="@drawable/ic_person_more" />
        </RelativeLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorLineSep"/>
        <RelativeLayout
            android:id="@+id/rl_mycarfdj"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/color_white"
            android:padding="@dimen/activity_horizontal_margin">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/textViewMainStyle"
                android:layout_centerVertical="true"
                android:text="@string/fdjlx"/>

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="15dp"
                android:background="@null"
                android:hint="@string/qxzfdjl"
                android:textSize="16sp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:src="@drawable/ic_person_more" />
        </RelativeLayout>
    </LinearLayout>
</LinearLayout>
