<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ll_header"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".my.NickNameActivity">



        <EditText
            android:id="@+id/et_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            style="@style/editTextStyle"
            android:background="@drawable/textview_gb_draw_gray"
            android:hint="@string/inputNickName"
            android:padding="@dimen/activity_horizontal_margin"
            android:layout_marginTop="@dimen/margin_90"
            android:layout_marginLeft="@dimen/padingLeft"
            android:layout_marginRight="@dimen/padingLeft"/>





    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:paddingLeft="15dp"
        android:paddingRight="15dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            style="@style/textViewSubStyle"
            android:text="@string/nickNameStander"
            android:layout_marginLeft="@dimen/padingLeft"
            android:layout_marginTop="@dimen/activity_vertical_margin"/>
    </RelativeLayout>



    <Button
        android:id="@+id/save_modify_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/myMainButtonStyle"
        android:layout_marginTop="@dimen/margin_90"
        android:layout_marginLeft="@dimen/padingLeft"
        android:layout_marginRight="@dimen/padingLeft"
        android:text="@string/saveModify"/>

</LinearLayout>
