<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rl_tracking"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_gray"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".tracking.TrackingActivity">



    <EditText

        android:id="@+id/et_tracking_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_90"
        android:layout_marginLeft="@dimen/padingLeft"
        android:layout_marginRight="@dimen/padingLeft"
        style="@style/editTextStyle"
        android:background="@drawable/textview_gb_draw_gray"
        android:focusable="true"
        android:hint="@string/qsrct"
        android:inputType="phone"
        android:padding="@dimen/activity_horizontal_margin"/>


    <LinearLayout
        android:id="@+id/ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:visibility="gone">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="*" />

        <TextView
            android:id="@+id/tv_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sqfcjs"
            android:textSize="13sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="*" />
    </LinearLayout>

    <Button
        android:id="@+id/btn_tracking"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/padingLeft"
        android:layout_marginRight="@dimen/padingLeft"
        style="@style/myMainButtonStyle"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:text="@string/fqgc"/>


</LinearLayout>
